fix chat message overflow

--- a/app/client/css/chats.less
+++ b/app/client/css/chats.less
@@ -24,6 +24,7 @@
   #chat-messages {
     height: 300px;
     overflow-y: scroll;
+    overflow-x: hidden;
     padding: 10px;
 
     .chat-message {
@@ -32,7 +33,8 @@
         padding: 5px 15px;
         border-radius: 15px;
         display: inline-block;
-        max-width: 300px;
+        max-width: 75%;
+        word-wrap: break-word;
       }
     }
 
